--- a/index.html
+++ b/index.html
@@ -23,30 +23,32 @@
     <meta name="subject" content="home page of Steve Plimpton" />
     <meta name="sandia.approval_type" content="formal" />
     <meta name="sandia.approved" content="2020-11334W" />
-    <link rev="owns" title="Steve Plimpton" href="mailto:sjplimp@sandia.gov" />
-    <link rev="made, publisher" title="Steve Plimpton" href="mailto:sjplimp@sandia.gov" />
+    <link rev="owns" title="Steve Plimpton" href="mailto:sjplimp@gmail.com" />
+    <link rev="made, publisher" title="Steve Plimpton" href="mailto:sjplimp@gmail.com" />
     <meta name="MSSmartTagsPreventParsing" content="TRUE" />
     <meta name="Author" content="Steve Plimpton" />
 </HEAD>
 
-<P>I recently retired (Oct 2022) from <A HREF = "snl">Sandia National Laboratories</A>,
-a US <A HREF = "doe">Department of Energy</A> lab, where I worked as a computational
+<H3>Steve Plimpton 
+</H3>
+<P>I retired in October 2022 from <A HREF = "snl">Sandia National Laboratories</A>, a
+US <A HREF = "doe">Department of Energy</A> lab, where I worked as a computational
 scientist in its <A HREF = "1400">Center for Computing Research</A>.
 </P>
-<P>I am still involved in doing some techincal work, particulary for the
+<P>I am still involved in doing some techincal work, particularly for the
 open source codes listed below.  You can reach me with a technical
 question or idea at "sjplimp at gmail.com", though I may not respond
 immediately!
 </P>
 <P>My research at Sandia involved implementing and using scientific
-simulations designed for parallel supercomputers, which often requires
-creation of efficient parallel algorithms.  Many of the models are
-particle based, some use structured grids or finite elements.  Most of
-the codes I develop are for materials modeling, some for biology and
-informatics problems.
+simulations designed for parallel supercomputers and the creation of
+efficient parallel algorithms.  Many of the models I worked on were
+particle based; some used structured grids or finite elements.  Most
+of the codes I was a developer for were used for materials modeling,
+some for biology and informatics problems.
 </P>
-<P>
-</P>
+<HR>
+
 <LI><A HREF = "download.html">Software for download</A>: 
 
 <UL><LI><A HREF = "https://www.lammps.org">LAMMPS</A> = classical molecular dynamics
@@ -93,7 +95,7 @@ informatics problems.
 </P>
 <HR>
 
-<A NAME = "ci"></A><H3>Current Interests 
+<H3>Current Interests 
 </H3>
 Molecular Dynamics (MD): <A HREF = "https://www.lammps.org">LAMMPS</A>, <A HREF = "download.html#pd">ParaDyn</A>,   <A HREF = "md.html">parallel algorithms</A>, simulations   (<A HREF = "mdsim.html">papers</A>, <A HREF = "http://www.lammps.org/pictures.html">pictures</A>,    <A HREF = "http://www.lammps.org/movies.html">movies</A>)<BR>
 <A HREF = "dsmc.html">Direct Simulation Monte Carlo</A> - low-density reacting flows   via particles, <A HREF = "https://sparta.github.io">SPARTA</A> and <A HREF = "dsmc.html">Icarus</A><BR>
@@ -105,7 +107,7 @@ Molecular Dynamics (MD): <A HREF = "https://www.lammps.org">LAMMPS</A>, <A HREF 
 </P>
 <HR>
 
-<A NAME = "pp"></A><H3>Past Projects 
+<H3>Past Projects 
 </H3>
 <A HREF = "informatics.html">Informatics</A> - data-intensive computing via a   <A HREF = "https://sjplimp.github.io/mapreduce">MapReduce-MPI library</A>,   and a stream-processing <A HREF = "https://sjplimp.github.io/phish">PHISH library</A><BR>
 <A HREF = "hpc.html">High Performance Computing (HPC)</A> - neuro-inspired computing,   performance comparisons of parallel architectures<BR>
