--- a/index.html
+++ b/index.html
@@ -44,16 +44,13 @@
      hspace="0" alt=""></td></tr>
 </table>
 
-<H3>Steve Plimpton 
-</H3>
 <P>I retired in October 2022 from <A HREF = "snl">Sandia National Laboratories</A>, a
 US <A HREF = "doe">Department of Energy</A> lab, where I worked as a computational
 scientist in its <A HREF = "1400">Center for Computing Research</A>.
 </P>
-<P>I am still involved in doing some techincal work, particularly for the
-open source codes listed below.  You can reach me with a technical
-question or idea at "sjplimp at gmail.com", though I may not respond
-immediately!
+<P>I'm still involved in some technical work, particularly for the open
+source codes listed below.  You can reach me with a question or idea
+at "sjplimp at gmail.com", though I may not respond immediately!
 </P>
 <P>My research at Sandia involved implementing and using scientific
 simulations designed for parallel supercomputers and the creation of
@@ -64,8 +61,8 @@ some for biology and informatics problems.
 </P>
 <HR>
 
-<LI><A HREF = "download.html">Software for download</A>: 
-
+<H3><A HREF = "download.html">Software for download</A>: 
+</H3>
 <UL><LI><A HREF = "https://www.lammps.org">LAMMPS</A> = classical molecular dynamics
 <LI><A HREF = "https://sparta.github.io">SPARTA</A> = Direct Simulation Monte Carlo (DSMC)
 <LI><A HREF = "https://spparks.github.io">SPPARKS</A> = kinetic and Metropolis Monte Carlo
