--- a/index.html
+++ b/index.html
@@ -44,24 +44,27 @@
      hspace="0" alt=""></td></tr>
 </table>
 
+<P>
+</P>
 <P>I retired in October 2022 from <A HREF = "snl">Sandia National Laboratories</A>, a
 US <A HREF = "doe">Department of Energy</A> lab, where I worked as a computational
 scientist in its <A HREF = "1400">Center for Computing Research</A>.
 </P>
 <P>I'm still involved in some technical work, particularly for the open
 source codes listed below.  You can reach me with a question or idea
-at "sjplimp at gmail.com", though I may not respond immediately!
+at this email address: sjplimp at gmail.com --- though I may not
+respond immediately. 
 </P>
 <P>My research at Sandia involved implementing and using scientific
-simulations designed for parallel supercomputers and the creation of
-efficient parallel algorithms.  Many of the models I worked on were
-particle based; some used structured grids or finite elements.  Most
-of the codes I was a developer for were used for materials modeling,
-some for biology and informatics problems.
+simulations designed for parallel supercomputers, as well as the
+creation of efficient parallel algorithms.  Many of the models I
+worked on were particle based; some used structured grids or finite
+elements.  Most of the codes I was a developer for were for materials
+modeling, some for biology and informatics problems.
 </P>
 <HR>
 
-<H3><A HREF = "download.html">Software for download</A>: 
+<H3>Software for <A HREF = "download.html">download</A>: 
 </H3>
 <UL><LI><A HREF = "https://www.lammps.org">LAMMPS</A> = classical molecular dynamics
 <LI><A HREF = "https://sparta.github.io">SPARTA</A> = Direct Simulation Monte Carlo (DSMC)
@@ -109,11 +112,11 @@ some for biology and informatics problems.
 
 <H3>Current Interests 
 </H3>
-Molecular Dynamics (MD): <A HREF = "https://www.lammps.org">LAMMPS</A>, <A HREF = "download.html#pd">ParaDyn</A>,   <A HREF = "md.html">parallel algorithms</A>, simulations   (<A HREF = "mdsim.html">papers</A>, <A HREF = "http://www.lammps.org/pictures.html">pictures</A>,    <A HREF = "http://www.lammps.org/movies.html">movies</A>)<BR>
-<A HREF = "dsmc.html">Direct Simulation Monte Carlo</A> - low-density reacting flows   via particles, <A HREF = "https://sparta.github.io">SPARTA</A> and <A HREF = "dsmc.html">Icarus</A><BR>
-<A HREF = "kmc.html">Kinetic Monte Carlo</A> - KMC and Metropolis MC simulator   <A HREF = "https://spparks.github.io">SPPARKS</A><BR>
-<A HREF = "https://lammps.github.io/fftmpi">Parallel FFTs</A> - parallel distributed 3d/2d FFTs<BR>
-<A HREF = "https://lammps.github.io/pizza">Pizza.py Toolkit</A> - Python-based tools   for simulation setup, analysis, plotting, viz <BR>
+<LI>Molecular Dynamics (MD): <A HREF = "https://www.lammps.org">LAMMPS</A>, <A HREF = "download.html#pd">ParaDyn</A>,   <A HREF = "md.html">parallel algorithms</A>, simulations   (<A HREF = "mdsim.html">papers</A>, <A HREF = "http://www.lammps.org/pictures.html">pictures</A>,    <A HREF = "http://www.lammps.org/movies.html">movies</A>)
+<LI><A HREF = "dsmc.html">Direct Simulation Monte Carlo</A> - low-density reacting flows   via particles, <A HREF = "https://sparta.github.io">SPARTA</A> and <A HREF = "dsmc.html">Icarus</A>
+<LI><A HREF = "kmc.html">Kinetic Monte Carlo</A> - KMC and Metropolis MC simulator   <A HREF = "https://spparks.github.io">SPPARKS</A>
+<LI><A HREF = "https://lammps.github.io/fftmpi">Parallel FFTs</A> - parallel distributed 3d/2d FFTs
+<LI><A HREF = "https://lammps.github.io/pizza">Pizza.py Toolkit</A> - Python-based tools   for simulation setup, analysis, plotting, viz 
 
 <P>
 </P>
@@ -121,20 +124,20 @@ Molecular Dynamics (MD): <A HREF = "https://www.lammps.org">LAMMPS</A>, <A HREF 
 
 <H3>Past Projects 
 </H3>
-<A HREF = "informatics.html">Informatics</A> - data-intensive computing via a   <A HREF = "https://sjplimp.github.io/mapreduce">MapReduce-MPI library</A>,   and a stream-processing <A HREF = "https://sjplimp.github.io/phish">PHISH library</A><BR>
-<A HREF = "hpc.html">High Performance Computing (HPC)</A> - neuro-inspired computing,   performance comparisons of parallel architectures<BR>
-<A HREF = "cell.html">Biological Cell Modeling</A> - particle-based reaction/diffusion   simulator <A HREF = "https://sjplimp.github.io/chemcell">ChemCell</A><BR>
-<A HREF = "algorithms.html">Parallel Algorithms</A>:   grid transfer, dynamic load-balancing, tinkertoy parallel programming,   matrix-vector multiply and many-body algorithms,   <A HREF = "download.html#gups">HPCC RandomAccess (GUPS) benchmark</A><BR>
-<A HREF = "genehunter.html">Gene Finding</A> - parallelization of the   <A HREF = "download.html#gene">Genehunter</A> genetic linkage analysis program<BR>
-<A HREF = "rad.html">Radiation Transport</A> - Boltzmann equation for thermal and   X-ray radiation<BR>
-<A HREF = "chisels.html">ChISELS</A> - surface evolution model of semiconductor processing   for micromachine devices (MEMS)<BR>
-<A HREF = "qs.html">QuickSilver</A> - particle-in-cell (PIC) relativistic   electromagnetics<BR>
-<A HREF = "pronto.html">PRONTO</A> - finite element transient dynamics (crash & boom)   with contact detection<BR>
-<A HREF = "nimrod.html">NIMROD</A> - plasma simulation of tokamaks<BR>
-<A HREF = "quantum.html">Electronic Structure</A> - quantum mechanics of solids<BR>
-<A HREF = "sar.html">Image Processing</A> - synthetic aperture radar (SAR) analysis<BR>
-<A HREF = "grain.html">Grain Growth</A> - Potts model on 2-d and 3-d lattices<BR>
-<A HREF = "ebeam.html">Electron Microscopy</A> - Monte Carlo trajectory simulation<BR>
-<A HREF = "overview.html">Parallel Computing</A> - general overviews <BR>
+<LI><A HREF = "informatics.html">Informatics</A> - data-intensive computing via a   <A HREF = "https://sjplimp.github.io/mapreduce">MapReduce-MPI library</A>,   and a stream-processing <A HREF = "https://sjplimp.github.io/phish">PHISH library</A>
+<LI><A HREF = "hpc.html">High Performance Computing (HPC)</A> - neuro-inspired computing,   performance comparisons of parallel architectures
+<LI><A HREF = "cell.html">Biological Cell Modeling</A> - particle-based reaction/diffusion   simulator <A HREF = "https://sjplimp.github.io/chemcell">ChemCell</A>
+<LI><A HREF = "algorithms.html">Parallel Algorithms</A>:   grid transfer, dynamic load-balancing, tinkertoy parallel programming,   matrix-vector multiply and many-body algorithms,   <A HREF = "download.html#gups">HPCC RandomAccess (GUPS) benchmark</A>
+<LI><A HREF = "genehunter.html">Gene Finding</A> - parallelization of the   <A HREF = "download.html#gene">Genehunter</A> genetic linkage analysis program
+<LI><A HREF = "rad.html">Radiation Transport</A> - Boltzmann equation for thermal and   X-ray radiation
+<LI><A HREF = "chisels.html">ChISELS</A> - surface evolution model of semiconductor processing   for micromachine devices (MEMS)
+<LI><A HREF = "qs.html">QuickSilver</A> - particle-in-cell (PIC) relativistic   electromagnetics
+<LI><A HREF = "pronto.html">PRONTO</A> - finite element transient dynamics (crash & boom)   with contact detection
+<LI><A HREF = "nimrod.html">NIMROD</A> - plasma simulation of tokamaks
+<LI><A HREF = "quantum.html">Electronic Structure</A> - quantum mechanics of solids
+<LI><A HREF = "sar.html">Image Processing</A> - synthetic aperture radar (SAR) analysis
+<LI><A HREF = "grain.html">Grain Growth</A> - Potts model on 2-d and 3-d lattices
+<LI><A HREF = "ebeam.html">Electron Microscopy</A> - Monte Carlo trajectory simulation
+<LI><A HREF = "overview.html">Parallel Computing</A> - general overviews 
 
 </HTML>
