--- a/index.html
+++ b/index.html
@@ -50,11 +50,9 @@
 US <A HREF = "doe">Department of Energy</A> lab, where I worked as a computational
 scientist in its <A HREF = "1400">Center for Computing Research</A>.
 </P>
-<P>I'm still involved in some technical work, particularly for the open
-source codes listed below.  You can reach me with a question or idea
-at this email address: sjplimp at gmail.com --- though I may not
-respond immediately. 
-</P>
+I'm still involved in some technical work, particularly for the open source codes listed below.<BR>
+You can reach me with a question or idea at this email address --- sjplimp at gmail.com --- though I may not respond immediately :) <BR>
+
 <P>My research at Sandia involved implementing and using scientific
 simulations designed for parallel supercomputers, as well as the
 creation of efficient parallel algorithms.  Many of the models I
