update my home page

--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@ US <A HREF = "doe">Department of Energy</A> lab, where I worked as a computation
 scientist in its <A HREF = "1400">Center for Computing Research</A>.
 </P>
 I'm still involved in some technical work, particularly for the open source codes listed below.<BR>
-You can reach me with a question or idea at this email address --- sjplimp at gmail.com --- though I may not respond immediately :) <BR>
+You can reach me with a question or idea at this email address --- sjplimp at gmail.com --- though I may not respond immediately. <BR>
 
 <P>My research at Sandia involved implementing and using scientific
 simulations designed for parallel supercomputers, as well as the
 creation of efficient parallel algorithms.  Many of the models I
 worked on were particle based; some used structured grids or finite
-elements.  Most of the codes I was a developer for were for materials
-modeling, some for biology and informatics problems.
+elements.  Most of the codes I helped develop were for materials
+modeling, some for biology and informatics applications.
 </P>
 <HR>
 
@@ -108,7 +108,7 @@ modeling, some for biology and informatics problems.
 </P>
 <HR>
 
-<H3>Current Interests 
+<H3>Active Interests 
 </H3>
 <LI>Molecular Dynamics (MD): <A HREF = "https://www.lammps.org">LAMMPS</A>, <A HREF = "download.html#pd">ParaDyn</A>,   <A HREF = "md.html">parallel algorithms</A>, simulations   (<A HREF = "mdsim.html">papers</A>, <A HREF = "http://www.lammps.org/pictures.html">pictures</A>,    <A HREF = "http://www.lammps.org/movies.html">movies</A>)
 <LI><A HREF = "dsmc.html">Direct Simulation Monte Carlo</A> - low-density reacting flows   via particles, <A HREF = "https://sparta.github.io">SPARTA</A> and <A HREF = "dsmc.html">Icarus</A>
