--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
       informatics, MapReduce,
       MapReduce-MPI library, MR-MPI library, streaming data, 
       stream-processing, PHISH library, CSlib messaging library,
-      client/server messaging, Python, Pizza.py toolkit, 
+      client/server messaging, Python, Pizza.py toolkit,
+      rendezvous algorithms,
       HPCC RandomAccess benchmark, GUPS, particle-in-cell, PIC, QuickSilver, 
       radiation transport, ChiSELS, surface growth and evolution,
       transient dynamics, PRONTO, NIMROD, neuro-inspired computing, GeneHunter,
@@ -125,7 +126,7 @@ modeling, some for biology and informatics applications.
 <LI><A HREF = "informatics.html">Informatics</A> - data-intensive computing via a   <A HREF = "https://sjplimp.github.io/mapreduce">MapReduce-MPI library</A>,   and a stream-processing <A HREF = "https://sjplimp.github.io/phish">PHISH library</A>
 <LI><A HREF = "hpc.html">High Performance Computing (HPC)</A> - neuro-inspired computing,   performance comparisons of parallel architectures
 <LI><A HREF = "cell.html">Biological Cell Modeling</A> - particle-based reaction/diffusion   simulator <A HREF = "https://sjplimp.github.io/chemcell">ChemCell</A>
-<LI><A HREF = "algorithms.html">Parallel Algorithms</A>:   grid transfer, dynamic load-balancing, tinkertoy parallel programming,   matrix-vector multiply and many-body algorithms,   <A HREF = "download.html#gups">HPCC RandomAccess (GUPS) benchmark</A>
+<LI><A HREF = "algorithms.html">Parallel Algorithms</A>:   rendezvous algorithms, dynamic load-balancing, tinkertoy parallel programming,   matrix-vector multiply and many-body algorithms,   <A HREF = "download.html#gups">HPCC RandomAccess (GUPS) benchmark</A>
 <LI><A HREF = "genehunter.html">Gene Finding</A> - parallelization of the   <A HREF = "download.html#gene">Genehunter</A> genetic linkage analysis program
 <LI><A HREF = "rad.html">Radiation Transport</A> - Boltzmann equation for thermal and   X-ray radiation
 <LI><A HREF = "chisels.html">ChISELS</A> - surface evolution model of semiconductor processing   for micromachine devices (MEMS)
