--- a/kmc.html
+++ b/kmc.html
@@ -44,6 +44,21 @@ as well.
 </UL>
 <HR>
 
+<HR>
+
+<P>This paper describes the SPPARKS KMC and MMC code, including its
+algorithms, code design, and applications:
+</P>
+<P><B>Parallel simulation via SPPARKS of on-lattice kinetic and Metropolis
+Monte Carlo models for materials processing</B>, J. A. Mitchell,
+F. Abdeljawad, C. Battaile, C. Garcia-Cardona, E. A. Holm,
+E. R. Homer, J. Madison, T. M. Rogers, A. P. Thompson, V. Tikare,
+E. Webb, S. J. Plimpton, Modelling and Simulation in Materials Science
+and Engineering, 31, 055001 (2023).
+(<A HREF = "abstracts/msmse23.html">abstract</A>)
+</P>
+<HR>
+
 <P>This paper describes an efficient kinetic Monte Carlo algorithm,
 implemented in SPPARKS, which can be used for modeling biochemical
 reactions, a la the Gillespie Stochastic Simulation Algorithm (SSA):
