--- a/papers.html
+++ b/papers.html
@@ -39,6 +39,22 @@ these links:
 
 <HR>
 
+<H4>2023 
+</H4>
+<P><B>Parallel simulation via SPPARKS of on-lattice kinetic and Metropolis
+Monte Carlo models for materials processing</B>, J. A. Mitchell,
+F. Abdeljawad, C. Battaile, C. Garcia-Cardona, E. A. Holm,
+E. R. Homer, J. Madison, T. M. Rogers, A. P. Thompson, V. Tikare,
+E. Webb, S. J. Plimpton, Modelling and Simulation in Materials Science
+and Engineering, 31, 055001
+(2023). (<A HREF = "abstracts/msmse23.html">abstract</A>) DOI:
+<A HREF = "https://doi.org/10.1088/1361-651X/accc4b">https://doi.org/10.1088/1361-651X/accc4b</A>
+</P>
+<P><B>Entropic Mixing of Ring/Linear Polymer Blends</B>, G. S. Grest, T. Ge,
+S. J. Plimpton, M. Rubinstein, T. C. O'Connor, ACS Polymers, 3,
+209-216 (2023). (<A HREF = "abstracts/acs23.html">abstract</A>) DOI:
+<A HREF = "https://doi.org/10.1021/acspolymersau.2c00050">https://doi.org/10.1021/acspolymersau.2c00050</A>
+</P>
 <H4>2022 
 </H4>
 <P><B>LAMMPS - A flexible simulation tool for particle-based materials
@@ -47,8 +63,8 @@ H. M. Aktulga, R. Berger, D. S. Bolintineanu, W. M. Brown,
 P. S. Crozier, P. J. in 't Veld, A. Kohlmeyer, S. G. Moore, T. D.
 Nguyen, R. Shan, M. J. Stevens, J. Tranchida, C. Trott,
 S. J. Plimpton, Comp Phys Comm, 271, 108171 (2022).
-(<A HREF = "abstracts/cpc22.html">abstract</A>)
-DOI:https://doi.org/10.1016/j.cpc.2021.108171
+(<A HREF = "abstracts/cpc22.html">abstract</A>) DOI:
+<A HREF = "https://doi.org/10.1016/j.cpc.2021.108171">https://doi.org/10.1016/j.cpc.2021.108171</A>
 </P>
 <P><B>A parallel algorithm for the concurrent atomistic-continuum
 methodology</B>, A. Diaz, B. Gu, Yang Li, S. J. Plimpton, D. L. McDowell,
